--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -9,7 +7,7 @@
         <link href="p.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-    <h5>by Print("PRS")</h5>
+    <h5>by Print("My device")</h5>
     <h1>Information user</h1>
         <h3>Show Browser And Version</h3>
        <p id="brows"></p>
